--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-custom: https://saweria.co/resaqulyubi
-custom: https://karyakarsa.com/resaqulyubi
+
+custom: ["https://saweria.co/resaqulyubi", "https://karyakarsa.com/resaqulyubi"]
